testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_multi_line_string/case2.expect.out
error: unterminated single-line string
  ==> case2.cj:15:11:
   | 
15 | cangjie ${"
   |           ^^ unterminated single-line string
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

1 error generated, 1 error printed.
